Updated site design.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,270 +1,1 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* line 20, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-body {
-  line-height: 1;
-}
-
-/* line 22, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 24, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 26, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 28, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 101, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 30, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 114, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block;
-}
-
-/* line 8, ../src/screen.scss */
-section, article, aside, header, footer, nav, dialog, figure {
-  display: block;
-  margin: 0;
-}
-
-/* line 21, ../src/screen.scss */
-body {
-  background: #222222 url("../images/bgtexture.png") repeat 0 0;
-  font-family: 'Ubuntu', sans-serif;
-  line-height: 1.2em;
-  color: #AAA;
-  font-size: 15px;
-}
-
-/* line 28, ../src/screen.scss */
-a {
-  color: #25D1E8;
-  text-decoration: none;
-}
-/* line 31, ../src/screen.scss */
-a:hover {
-  color: cyan;
-}
-
-/* line 36, ../src/screen.scss */
-h3 {
-  color: #CFEB00;
-  font-size: 1.3em;
-  margin-bottom: 5px;
-  padding: 2px 0;
-}
-
-/* line 43, ../src/screen.scss */
-.container {
-  width: 960px;
-  margin: auto;
-}
-/* line 46, ../src/screen.scss */
-.container header {
-  font-size: 3em;
-  padding: 75px 0;
-  color: #000;
-  display: block;
-}
-/* line 52, ../src/screen.scss */
-.container header h1 a {
-  text-decoration: none;
-  display: block;
-  width: 384px;
-  height: 150px;
-  margin: auto;
-  background: transparent url("../images/sprite.png?v=201012250200") no-repeat 0 0;
-}
-/* line 63, ../src/screen.scss */
-.container .page h2 {
-  display: block;
-  padding: 10px 0;
-  margin-bottom: 10px;
-}
-/* line 67, ../src/screen.scss */
-.container .page h2 span {
-  margin-left: 10px;
-  border-bottom: 5px solid #A00;
-  background: #800;
-  color: #DDD;
-  -webkit-box-shadow: #333 0px 1px 1px;
-  -moz-box-shadow: #333 0px 1px 1px;
-  font-size: 1.2em;
-  padding: 10px 10px 8px;
-}
-/* line 79, ../src/screen.scss */
-.container .page .blogs, .container .page .social, .container .page .aboutme {
-  display: block;
-  overflow: hidden;
-  background: #111;
-  border: 1px solid #333;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-box-shadow: #111 2px 2px 2px;
-  -webkit-box-shadow: #111 2px 2px 2px;
-  margin-bottom: 20px;
-  padding: 0 0 10px;
-}
-/* line 92, ../src/screen.scss */
-.container .page .aboutme p {
-  padding: 5px 20px;
-}
-/* line 95, ../src/screen.scss */
-.container .page .about {
-  display: block;
-  width: 250px;
-  height: 250px;
-  margin: 10px 24px;
-  float: right;
-  border: 1px solid #333;
-}
-/* line 104, ../src/screen.scss */
-.container .page .blog {
-  display: block;
-  width: 279px;
-  height: 187px;
-  margin: 10px auto 30px;
-  border: 1px solid #333;
-}
-/* line 111, ../src/screen.scss */
-.container .page .photography {
-  background: transparent url("../images/sprite.png?v=201012250200") no-repeat 0 -160px;
-}
-/* line 112, ../src/screen.scss */
-.container .page .technology {
-  background: transparent url("../images/sprite.png?v=201012250200") no-repeat 0 -349px;
-}
-/* line 113, ../src/screen.scss */
-.container .page .reflexions {
-  background: transparent url("../images/sprite.png?v=201012250200") no-repeat 0 -538px;
-}
-/* line 115, ../src/screen.scss */
-.container .page div.social-media-wrapper {
-  display: block;
-  overflow: hidden;
-  margin: 10px auto 0;
-  width: 360px;
-}
-/* line 122, ../src/screen.scss */
-.container .page ul.social-icons li {
-  float: left;
-}
-/* line 124, ../src/screen.scss */
-.container .page ul.social-icons li a {
-  display: block;
-  width: 32px;
-  height: 32px;
-  margin-left: 8px;
-}
-/* line 130, ../src/screen.scss */
-.container .page ul.social-icons li a.twitter {
-  background: transparent url("../images/sprite.png?v=201012250200") no-repeat -352px -162px;
-}
-/* line 131, ../src/screen.scss */
-.container .page ul.social-icons li a.github {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -196px;
-}
-/* line 132, ../src/screen.scss */
-.container .page ul.social-icons li a.email {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -229px;
-}
-/* line 133, ../src/screen.scss */
-.container .page ul.social-icons li a.linkedin {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -263px;
-}
-/* line 134, ../src/screen.scss */
-.container .page ul.social-icons li a.flickr {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -297px;
-}
-/* line 135, ../src/screen.scss */
-.container .page ul.social-icons li a.facebook {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -332px;
-}
-/* line 136, ../src/screen.scss */
-.container .page ul.social-icons li a.posterous {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -365px;
-}
-/* line 137, ../src/screen.scss */
-.container .page ul.social-icons li a.googlebuzz {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -399px;
-}
-/* line 138, ../src/screen.scss */
-.container .page ul.social-icons li a.picasa {
-  background: transparent url("../images/sprite.png?v=201012250200") repeat -352px -434px;
-}
-/* line 145, ../src/screen.scss */
-.container footer {
-  margin: 15px 0;
-}
-/* line 148, ../src/screen.scss */
-.container footer .footnote {
-  text-align: center;
-  color: #888;
-  font-size: 0.85em;
-}
-
-/* line 157, ../src/screen.scss */
-.cols {
-  width: 100%;
-  overflow: hidden;
-}
-/* line 160, ../src/screen.scss */
-.cols .col1_3, .cols .col2_3, .cols .col3_3 {
-  float: left;
-  width: 31%;
-  padding: 0 10px;
-}
-/* line 165, ../src/screen.scss */
-.cols .col1_3, .cols .col2_3 {
-  border-right: 2px solid #000;
-}
-/* line 168, ../src/screen.scss */
-.cols .col2_3, .cols .col3_3 {
-  border-left: 1px solid #333;
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}section,article,aside,header,footer,nav,dialog,figure{display:block;margin:0}body{background:#fff url("../images/bgtexture.png?v=201012250200") repeat 0 0;font-family:'Jura', sans-serif;line-height:1.2em;color:#AAA;font-size:18px;width:800px;margin:auto;color:#333}a{text-decoration:none;color:blue}a:visited{color:blue}a:hover{color:red}p{line-height:1.5em}section{margin-bottom:2.5em}h1{font-size:5em;padding:0.5em 0 0.4em;line-height:1em;font-family:"Gruppo", sans-serif}h1 a{color:#0C8CF5}h1 a:visited{color:#0C8CF5}h1 a:hover{color:blue}h2{font-size:2em;line-height:1em;padding:0 0 0.5em;color:#666}h3{font-size:1.2em;color:#222}.blog-wrapper{overflow:hidden}.blog{float:right;display:block;overflow:hidden;margin:10px 0 30px 30px}div.social-media-wrapper{display:block;overflow:hidden;margin:10px auto 0;width:360px}ul.social-icons li{float:left}ul.social-icons li a{display:block;width:32px;height:32px;margin-left:8px}ul.social-icons li a.twitter{background:transparent url("../images/icons.png?v=201112120121") no-repeat 0px -2px}ul.social-icons li a.github{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -36px}ul.social-icons li a.email{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -70px}ul.social-icons li a.linkedin{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -104px}ul.social-icons li a.flickr{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -138px}ul.social-icons li a.facebook{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -172px}ul.social-icons li a.posterous{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -206px}ul.social-icons li a.googlebuzz{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -240px}ul.social-icons li a.picasa{background:transparent url("../images/icons.png?v=201112120121") repeat 0px -274px}footer{margin:15px 0}footer .footnote{text-align:center;color:#888;font-size:0.85em}
