Small css change.

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -52,6 +52,7 @@ h1 {
     padding: 0.5em 0 0.4em;
     line-height: 1em;
     font-family: "Gruppo", sans-serif;
+    text-align: center;
     a {
         color: #0C8CF5;
         &:visited {
