Changed link color.

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -30,9 +30,9 @@ body {
 
 a {
     text-decoration: none;
-    color: blue;
+    color: green;
     &:visited {
-        color: blue;
+        color: green;
     }
     &:hover {
         color: red;
